[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
heron = {version="4", features = ["3d"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
